<resources>
    <string name="app_name">Route Optimization</string>

    //Home Page
    <string name="title_home">Home</string>
    <string name="welcome">Welcome to</string>
    <string name="route_app">Route Optimization App</string>
    <string name="top_app">#1 Route Optimization App</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="vehicle_motorcycle">Motorcycle</string>
    <string name="vehicle_car">Car</string>
    <string name="recent_history">Recent History</string>
    <string name="arrow">Forward Arrow</string>

    //Destination Page
    <string name="back">Back</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="vehicle_option">Vehicle Option</string>
    <string name="your_location">Your Location</string>
    <string name="your_destination">Your Destination</string>
    <string name="switch_location">Switch Location</string>
    <string name="add_destination">Add Destination</string>
    <string name="remove_destination">Remove Destination</string>
    <string name="optimize">Optimize</string>
    <string name="map_location">Map Location</string>
    <string name="select_location">Select Location</string>

    //History Page
    <string name="title_history">History</string>
    <string name="title_page_history">Trip History</string>

    //Dummy Data History Trip
    <string-array name="data_date">
        <item>11 Nov, 2024</item>
        <item>12 Nov, 2024</item>
    </string-array>

    <string-array name="data_status">
        <item>Completed</item>
        <item>Completed</item>
    </string-array>

    <string-array name="data_from">
        <item>Jl. siwalankerto timur 1</item>
        <item>Jl. siwalankerto timur 2</item>
    </string-array>

    <string-array name="data_destination">
        <item>Universitas Ciputra</item>
        <item>Universitas Ciputra</item>
    </string-array>

    <integer-array name="data_vehicle">
        <item>@drawable/ic_motorcycle</item>
        <item>@drawable/ic_car</item>
    </integer-array>

    //Result Page
    <string name="close_popup_button">Close Button</string>
    <string name="destination_1">Rute 1\nJl. Ketintang Timur</string>
    <string name="time_1">34 menit</string>
    <string name="destination_2">Rute 2\nJl. Hr Muhammad</string>
    <string name="time_2">36 menit</string>
    <string name="begin_trip">Go</string>

</resources>