<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.destination.DestinationActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_back_24"
        android:layout_margin="20dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/option_vehicle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/vehicle_image"
                android:src="@drawable/ic_motorcycle"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_option"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/option_vehicle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/option_vehicle"
                app:layout_constraintTop_toTopOf="@+id/option_vehicle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_vehicle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/your_location"
                android:src="@drawable/ic_location_24"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_location"
                app:layout_constraintStart_toEndOf="@+id/icon_location"
                app:layout_constraintTop_toTopOf="@+id/icon_location">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_location"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_location"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/icon_destination"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/your_destination"
                android:src="@drawable/ic_destination_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_location" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_destination"
                app:layout_constraintStart_toEndOf="@+id/icon_destination"
                app:layout_constraintTop_toTopOf="@+id/icon_destination">

                <TextView
                    android:id="@+id/tv_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_destination"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_destination_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_destination"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_compare_arrows_24"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:contentDescription="@string/switch_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_destination">

        <ImageButton
            android:id="@+id/button_add_destination"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/green"
            android:src="@drawable/ic_add_white_24"
            android:contentDescription="@string/add_destination"
            app:layout_constraintTop_toBottomOf="@+id/card_destination" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_add_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/add_destination"
        app:layout_constraintBottom_toBottomOf="@+id/card_add_destination"
        app:layout_constraintStart_toEndOf="@+id/card_add_destination"
        app:layout_constraintTop_toTopOf="@+id/card_add_destination"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_optimize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/optimize"
        android:layout_margin="20dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_map"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/button_map"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/ic_location_pin_24"
            android:contentDescription="@string/map_location"/>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>